[gd_scene load_steps=3 format=3 uid="uid://byn4m6vnp87r0"]

[ext_resource type="Script" uid="uid://c3uqj56hq00ws" path="res://ui/result.gd" id="1_q8mf3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_75fu2"]
content_margin_left = 50.0
content_margin_top = 50.0
content_margin_right = 50.0
content_margin_bottom = 50.0
bg_color = Color(0, 0, 0, 0.784314)

[node name="Result" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q8mf3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_75fu2")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "..."
horizontal_alignment = 1

[node name="NextLevelBtn" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Next level"

[node name="RestartBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="GoToListBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Go to list"

[connection signal="pressed" from="PanelContainer/VBoxContainer/NextLevelBtn" to="." method="_on_next_level_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GoToListBtn" to="." method="_on_go_to_list_btn_pressed"]
